; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/math-emu/extr_sp_tint.c_ieee754sp_tuns.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/math-emu/extr_sp_tint.c_ieee754sp_tuns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ieee754sp_tuns(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = call i32 (...) @ieee754sp_1e31()
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @ieee754sp_lt(i32 %6, i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = call i64 @ieee754sp_tint(i32 %11)
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %2, align 4
  br label %21

14:                                               ; preds = %1
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @ieee754sp_sub(i32 %15, i32 %16)
  %18 = call i64 @ieee754sp_tint(i32 %17)
  %19 = trunc i64 %18 to i32
  %20 = or i32 %19, -2147483648
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %14, %10
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @ieee754sp_1e31(...) #1

declare dso_local i64 @ieee754sp_lt(i32, i32) #1

declare dso_local i64 @ieee754sp_tint(i32) #1

declare dso_local i32 @ieee754sp_sub(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
